<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/ic_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/id"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_id_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/id_hint"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_error_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_error"
        android:textColor="@color/error"
        android:textSize="12sp"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/password"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_pw_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLines="1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_error_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_error"
        android:textColor="@color/error"
        android:textSize="12sp"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/check_auto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="자동 로그인" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up" />
</LinearLayout>